# ChangeLog for www-client/opera
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/opera/ChangeLog,v 1.451 2010/02/24 15:42:33 jer Exp $

*opera-10.50_pre6232 (24 Feb 2010)

  24 Feb 2010; Jeroen Roovers <jer@gentoo.org> +opera-10.50_pre6232.ebuild:
  Version bump
  <http://my.opera.com/desktopteam/blog/2010/02/23/new-build-for-you-guys>.

*opera-10.50_pre6225 (19 Feb 2010)

  19 Feb 2010; Jeroen Roovers <jer@gentoo.org> +opera-10.50_pre6225.ebuild,
  +files/opera-10.50-paths.patch:
  Version bump
  <http://my.opera.com/desktopteam/blog/2010/02/19/gstreamer-video-on-mac>.
  Fix more paths thanks to shade (bug #305303).

  17 Feb 2010; Jeroen Roovers <jer@gentoo.org> opera-10.20_pre4744.ebuild:
  Remove final qt3 dependent thanks to ssuominen.

  16 Feb 2010; Jeroen Roovers <jer@gentoo.org> -opera-10.50_pre6177.ebuild,
  -opera-10.50_pre6201.ebuild, -opera-10.50_pre6204.ebuild,
  -opera-10.50_pre6208.ebuild:
  Remove old.

  16 Feb 2010; Jeroen Roovers <jer@gentoo.org> opera-10.10.ebuild,
  opera-10.10-r1.ebuild, opera-10.20_pre4744.ebuild:
  Remove qt3 support and hence ppc and x86-fbsd support (bug #283430).
  Remove unneeded qt-core dependency (qt-gui is enough).

*opera-10.50_pre6219 (11 Feb 2010)

  11 Feb 2010; Jeroen Roovers <jer@gentoo.org> +opera-10.50_pre6219.ebuild:
  Version bump
  <http://my.opera.com/desktopteam/blog/2010/02/11/windows-beta-released-and
  -more>.

*opera-10.50_pre6208 (06 Feb 2010)

  06 Feb 2010; Jeroen Roovers <jer@gentoo.org> +opera-10.50_pre6208.ebuild:
  Version bump
  <http://my.opera.com/desktopteam/blog/2010/02/05/skin-fixes-unite-and-then
  -some>.

  01 Feb 2010; Jeroen Roovers <jer@gentoo.org> opera-10.50_pre6201.ebuild,
  opera-10.50_pre6204.ebuild:
  Add die() when dobin fails. Use mv again instead of doins to preserve
  filename permissions thanks to Jochen (bug #303066).

*opera-10.50_pre6204 (01 Feb 2010)
