@@ -1,6 +1,12 @@
 # ChangeLog for www-client/opera
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/opera/ChangeLog,v 1.451 2010/02/24 15:42:33 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/opera/ChangeLog,v 1.452 2010/02/25 15:12:08 jer Exp $
+
+*opera-10.50_pre6235 (25 Feb 2010)
+
+  25 Feb 2010; Jeroen Roovers <jer@gentoo.org> +opera-10.50_pre6235.ebuild:
+  Version bump <http://my.opera.com/desktopteam/blog/2010/02/25/more-fixes>
+  thanks to Christian Faulhammer.
 
 *opera-10.50_pre6232 (24 Feb 2010)
 
